Fix: Correcciones en tests unitarios - modificaciones parciales para traer main a rama